package dk.sdu.sesem4.player;

import dk.sdu.sesem4.common.data.entity.Entity;
import dk.sdu.sesem4.common.data.entity.EntityType;

public class Player extends Entity {

	/**
	 * Constructor for the Player class.
	 */
	public Player() {
		super(EntityType.Player);
	}
}
